fix: resolve z-index conflicts

--- a/src/app/dashboard/query/query.component.scss
+++ b/src/app/dashboard/query/query.component.scss
@@ -1,8 +1,3 @@
-.md-drppicker.shown {
-  font-family: "Roboto, -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, sans-serif";
-  letter-spacing: "0.5px"
-}
-
 .hub-icon {
   height: 50px;
   width: 50px;
@@ -41,4 +36,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+#topics-selection {
+  z-index: 900;
+}
+
+.customDropdown {
+  z-index: 901;
+}
+
+.md-drppicker {
+  font-family: Roboto, -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, sans-serif;
 }
